--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>eFoodPantry</groupId>
 	<artifactId>eFoodPantry</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.3.9-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
@@ -20,54 +20,29 @@
 			<version>3.9</version>
 		</dependency>
 		<dependency>
-		    <groupId>com.itextpdf</groupId>
-		    <artifactId>itextpdf</artifactId>
-		    <version>5.5.11</version>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
 		</dependency>
 		<dependency>
-		    <groupId>com.itextpdf.tool</groupId>
-		    <artifactId>xmlworker</artifactId>
-		    <version>5.5.11</version>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>5.2.3</version>
 		</dependency>
 		<dependency>
-		    <groupId>commons-io</groupId>
-		    <artifactId>commons-io</artifactId>
-		    <version>2.11.0</version>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-fxml</artifactId>
+			<version>20</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.openjfx</groupId>
-		    <artifactId>javafx-fxml</artifactId>
-		    <version>20</version>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-graphics</artifactId>
+			<version>20</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.openjfx</groupId>
-		    <artifactId>javafx-graphics</artifactId>
-		    <version>20</version>
-		</dependency>
-		<dependency>
-		    <groupId>org.openjfx</groupId>
-		    <artifactId>javafx-controls</artifactId>
-		    <version>20</version>
-		</dependency>
-		<dependency>
-		    <groupId>org.openjfx</groupId>
-		    <artifactId>javafx-swing</artifactId>
-		    <version>20</version>
-		</dependency>
-		<dependency>
-		    <groupId>org.apache.pdfbox</groupId>
-		    <artifactId>pdfbox-tools</artifactId>
-		    <version>2.0.25</version>
-		</dependency>
-		<dependency>
-		    <groupId>net.sf.nervalreports</groupId>
-		    <artifactId>core</artifactId>
-		    <version>1.2</version>
-		</dependency>
-		<dependency>
-		    <groupId>net.sf.nervalreports</groupId>
-		    <artifactId>pdf-generator</artifactId>
-		    <version>1.2</version>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<version>20</version>
 		</dependency>
 	</dependencies>
 	<build>
