--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ application.support=Please see Pantry Staff for additional help.
 application.description=An application to manage customers and visits at the MCFP.
 application.vendorId=DJohnson
 application.id=FoodPantry
+in.memory.of=Toni
 customers.show.inactive=false
 visits.show.inactive=false
 visits.show.all=false
